# CEC-Electronic-Game

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFFS.md  NOTICE  README.md  TODOS.md  package.json  pnpm-lock.yaml
.claude/: settings.json
crates/sim-wasm/: Cargo.toml
crates/sim-wasm/src/: lib.rs
docs/: architecture.md  bench-realism-and-emi-kernel.md  cell-characterization-and-integration-hierarchy.md  cell-characterization-build-plan.md  connectors-and-large-packages-ideation.md  convenience-primitives-to-refine.md  cpu-build-kit.md  determinism.md  divergence-idea-bank.md  doom-circuit-vision.md  flash-storage-design.md  frameworks-roadmap.md  game-component-reality-curriculum.md  game-contracts-deep-dive.md  game-contracts-economy.md  game-design-master-brainstorm.md  game-design.md  game-economy-progression-implementation.md  game-factory-loop.md  game-ground-returns.md  game-lux-and-lab-book.md  game-midgame-classroom-sharing.md  game-product-sim-failure-modes.md  game-product-simulation.md  game-progression.md  game-rewards.md  game-tech-tree-format.md  grounded-directions-roadmap.md  heat-on-the-board-ideation.md  ic-buildings-ideation.md  ic-library-and-variants.md  ic-package-density-ideation.md  ic-reference-library.md  implementation-plan.md  invisible-electronics-ideation.md  memory-and-assembly-plan.md  memory-characterization-design.md  parts-catalog-ideation.md  parts-roadmap.md  phase2-recursive-zoom-and-divergences.md  (+7 more)
scripts/: build-wasm.sh
web/: .prettierignore  eslint.config.js  index.html  package.json  (+3 more)
(+219 files in other folders)
